test/error/E43.chigfn
{
	"type": "function",
	"name": "helloworld",
	"outputs": []
}
